src/objects/Application_Branching_Question__c.object
<CustomObject>
    <description>This object will be used to direct an applicant to the correct question based on the answer they have given on specific branching questions.</description>
    <fields>
        <fullName>Answer__c</fullName>
        <description>This is the value it must match to, to choose this template. Note, this could be a semi colon separated list, so if more than one answer should follow the same track, you do not need to create multiple different AWT.</description>
        <inlineHelpText>This is the value it must match to, to choose this template. Note, this could be a semi colon separated list, so if more than one answer should follow the same track, you do not need to create multiple different AWT.</inlineHelpText>
        <label>Answer</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Question__c</fullName>
        <description>This is the question that is the branching question. Note, the related question MUST have &quot;Is Branching Question&quot; equal to true, to allow this record to be created.</description>
        <inlineHelpText>This is the question that is the branching question. Note, the related question MUST have &quot;Is Branching Question&quot; equal to true, to allow this record to be created.</inlineHelpText>
        <label>Application Question</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Related question must be a branching question.</errorMessage>
            <filterItems>
                <field>Application_Question__c.Is_Branching_Question__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Application_Question__c</referenceTo>
        <relationshipLabel>Application Branching Questions</relationshipLabel>
        <relationshipName>Application_Branching_Questions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <description>This is the template that the branching question relates to.</description>
        <inlineHelpText>This is the template that the branching question relates to.</inlineHelpText>
        <label>Template</label>
        <referenceTo>Application_Window_Template__c</referenceTo>
        <relationshipLabel>Application Branching Questions</relationshipLabel>
        <relationshipName>Application_Branching_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Application Branching Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Application_Question__c</columns>
        <columns>Answer__c</columns>
        <columns>Template__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ABQ-{000000}</displayFormat>
        <label>Application Branching Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Branching Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>